--- a/modules/administration-guide/pages/running-at-scale.adoc
+++ b/modules/administration-guide/pages/running-at-scale.adoc
@@ -186,7 +186,7 @@ improve performance and reliability by distributing the workload across multiple
 and providing redundancy in case of cluster failures.
 
 .Scheme of a multi-cluster environment
-image::docs:administration-guide:running-at-scale/snip_che-multi-cluster.png[Scheme of a multi-cluster environment]
+image::running-at-scale/snip_che-multi-cluster.png[Scheme of a multi-cluster environment]
 
 You can test running {prod-short} in a multi-cluster by using the link:https://developers.redhat.com/developer-sandbox[Developer Sandbox],
 a free trial environment by Red Hat with pre-configured tools and services.
