--- a/modules/administration-guide/pages/uninstalling-che.adoc
+++ b/modules/administration-guide/pages/uninstalling-che.adoc
@@ -10,7 +10,7 @@
 
 WARNING: Uninstalling {prod-short} removes all {prod-short}-related user data!
 
-Use `{orch-cli}` to uninstall the {prod-short} instance.
+Use `{prod-cli}` to uninstall the {prod-short} instance.
 
 .Prerequisites
 
