add project context

--- a/modules/administration-guide/pages/running-at-scale.adoc
+++ b/modules/administration-guide/pages/running-at-scale.adoc
@@ -63,7 +63,7 @@ The resource requirements for CDEs can vary significantly based on the specific 
 For example, a simple CDE might require only a few hundred megabytes of memory,
 while a more complex one will need several gigabytes of memory and multiple CPU cores.
 
-include::example$snip_che-running-at-scale-calculate-resources.adoc[]
+include::example$snip_{project-context}-running-at-scale-calculate-resources.adoc[]
 
 .Using etcd
 
@@ -186,7 +186,7 @@ improve performance and reliability by distributing the workload across multiple
 and providing redundancy in case of cluster failures.
 
 .Scheme of a multi-cluster environment
-image::running-at-scale/snip_che-multi-cluster.png[Scheme of a multi-cluster environment]
+image::running-at-scale/snip_{project-context}-multi-cluster.png[Scheme of a multi-cluster environment]
 
 You can test running {prod-short} in a multi-cluster by using the link:https://developers.redhat.com/developer-sandbox[Developer Sandbox],
 a free trial environment by Red Hat with pre-configured tools and services.
