--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -1,6 +1,11 @@
 [id="idea-ultimate"]
 = Connecting JetBrains IntelliJ IDEA Ultimate Edition to a {prod-short} workspace
 
+[IMPORTANT]
+====
+Integration with the link:https://www.jetbrains.com/remote-development/gateway/[JetBrains Gateway] is currently implemented only for x86 {orch-name} clusters.
+====
+
 {prod} supports connecting your local IntelliJ IDE to a running {prod-short} workspace over JetBrains Gateway.
 
 .Prerequisites
