feat: add the 'metadata.attributes.arch' array for supported architectures
Signed-off-by: Oleksii Orel <oorel@redhat.com>

--- a/modules/administration-guide/pages/configuring-editors-definitions.adoc
+++ b/modules/administration-guide/pages/configuring-editors-definitions.adoc
@@ -42,6 +42,10 @@ metadata:
   # Additional attributes
   attributes:
     title: This is my editor
+    # (MANDATORY) The supported architectures
+    arch:
+      - x86_64
+      - arm64
     # (MANDATORY) The publisher name
     publisher: publisher
     # (MANDATORY) The editor version
