replaced e.g. with for example

--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -46,7 +46,7 @@ To understand the nature of topics, see the link:https://redhat-documentation.gi
 == Project structure, branches and workflows
 
 . link:https://github.com/eclipse-che/che-docs/tree/main[main branch] - hosts documentation for next version of Che.
-. release branches (e.g. link:https://github.com/eclipse-che/che-docs/tree/7.90.x[7.90.x]) - hosts documentations for stable versions of Che.
+. release branches (for example link:https://github.com/eclipse-che/che-docs/tree/7.90.x[7.90.x]) - hosts documentations for stable versions of Che.
 . link:https://github.com/eclipse-che/che-docs/tree/publication[publication] branch stores published documents.
 . link:https://github.com/eclipse-che/che-docs/tree/publication-builder[publication-builder] branch hosts a structure and a workflow for publishing documentation to the link:https://github.com/eclipse-che/che-docs/tree/publication[publication] branch.
 
