--- a/modules/administration-guide/examples/snip_che-steps-to-build-custom-plugin-registry-in-workspace.adoc
+++ b/modules/administration-guide/examples/snip_che-steps-to-build-custom-plugin-registry-in-workspace.adoc
@@ -1,6 +1,6 @@
 ... Start a workspace using the link:https://github.com/eclipse-che/che-plugin-registry[plugin registry repository].
 
-... Open a terminal and check out the Git tag that corresponds to your {prod-short} version (e.g., `7.87.0`):
+... Open a terminal and check out the Git tag that corresponds to your {prod-short} version (for example, `7.87.0`):
 +
 [source]
 ----
