--- a/modules/administration-guide/pages/running-at-scale.adoc
+++ b/modules/administration-guide/pages/running-at-scale.adoc
@@ -136,7 +136,7 @@ a stripped-down copy of its CSV is created in every {namespace} the Operator is 
 These stripped-down CSVs are known as “Copied CSVs”
 and communicate to users which controllers are actively reconciling resource events in a given namespace.
 On especially large clusters, with namespaces and installed operators tending in the hundreds or thousands,
-Copied CSVs consume an unsustainable amount of resources; e.g., OLM memory usage, cluster etcd limits,
+Copied CSVs consume an unsustainable amount of resources; for example, OLM memory usage, cluster etcd limits,
 networking, etc. To eliminate the CSVs copied to every namespace, configure the `OLMConfig` object accordingly:
 
 [source,yaml]
