--- a/modules/administration-guide/pages/security-best-practices.adoc
+++ b/modules/administration-guide/pages/security-best-practices.adoc
@@ -240,7 +240,7 @@ By default, {prod}
 includes the embedded Open VSX registry
 which contains a limited set of extensions for the Microsoft Visual Studio Code -
 Open Source editor.
-Alternatively, cluster administrators can specify a different plugin registry in the Custom Resource, e.g.
+Alternatively, cluster administrators can specify a different plugin registry in the Custom Resource, for example
 https://open-vsx.org that contains thousands of extensions.
 They can also build a custom Open VSX registry.
 include::example$snip_che-managing-extensions.adoc[]
@@ -253,7 +253,7 @@ Installing extra extensions increases potential risks. To minimize these risks, 
 .Secrets
 
 Keep sensitive data stored as {kubernetes} secrets in the users’
-namespaces confidential (e.g. Personal Access Tokens (PAT), and SSH keys).
+namespaces confidential (for example Personal Access Tokens (PAT), and SSH keys).
 
 .Git repositories
 
