--- a/modules/end-user-guide/pages/devfile-introduction.adoc
+++ b/modules/end-user-guide/pages/devfile-introduction.adoc
@@ -12,7 +12,7 @@ link:https://devfile.io/[Devfiles] are `yaml` text files used for development en
 
 [WARNING]
 ====
-Some images can not be used as-is for defining Cloud Development Environment since Visual Studio Code - Open Source ("Code - OSS") can not be started in the containers with missing `openssl` and `libbrotli`. Missing libraries should be explicitly installed on the Dockerfile level e.g. `RUN yum install compat-openssl11 libbrotli`
+Some images can not be used as-is for defining Cloud Development Environment since Visual Studio Code - Open Source ("Code - OSS") can not be started in the containers with missing `openssl` and `libbrotli`. Missing libraries should be explicitly installed on the Dockerfile level for example `RUN yum install compat-openssl11 libbrotli`
 ====
 
 .Devfile and Universal Developer Image
