--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -68,7 +68,7 @@ image::gateway-select-ws.png[Connecting to OpenShift API server,link="{imagesdir
 
 image::gateway-connecting.png[Connecting to remote host,link="{imagesdir}/gateway-connecting.png"]
 
-= Using in a disconnected cluster
+== Using in a disconnected cluster
 
 The following URLs must be white-listed on the proxy side:
 
