--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -70,7 +70,7 @@ image::gateway-connecting.png[Connecting to remote host,link="{imagesdir}/gatewa
 
 == Using in a disconnected cluster
 
-The following URLs must be white-listed on the proxy side:
+The following URLs must be allow-listed on the proxy side:
 
 * https://download.jetbrains.com/idea/ideaIU-2024.3.2.1.tar.gz
 * https://download.jetbrains.com/webstorm/WebStorm-2024.3.2.1.tar.gz
