--- a/modules/administration-guide/partials/proc_installing-ingress-nginx-controller-on-amazon-elastic-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_installing-ingress-nginx-controller-on-amazon-elastic-kubernetes-service.adoc
@@ -7,6 +7,13 @@
 
 Follow these instructions to install the link:https://kubernetes.github.io/ingress-nginx/[Ingress-Nginx Controller] on {eks-short}.
 
+.Prerequisites
+
+* Ensure your VPC subnets have the appropriate tags for load balancer discovery:
+** For public subnets (with internet gateway routes): `kubernetes.io/role/elb=1`
+** For private subnets (without internet gateway routes): `kubernetes.io/role/internal-elb=1`
+** For all subnets: `kubernetes.io/cluster/<CLUSTER_NAME>=shared` or `kubernetes.io/cluster/<CLUSTER_NAME>=owned`
+
 .Procedure
 
 . Install the `Ingress-Nginx Controller` using `Helm`:
@@ -22,7 +29,8 @@ helm install ingress-nginx ingress-nginx/ingress-nginx \
   --namespace ingress-nginx \
   --set controller.service.annotations."service\.beta\.kubernetes\.io/aws-load-balancer-backend-protocol"=tcp \
   --set controller.service.annotations."service\.beta\.kubernetes\.io/aws-load-balancer-cross-zone-load-balancing-enabled"="true" \
-  --set controller.service.annotations."service\.beta\.kubernetes\.io/aws-load-balancer-type"=nlb
+  --set controller.service.annotations."service\.beta\.kubernetes\.io/aws-load-balancer-type"=nlb \
+  --set controller.service.annotations."service\.beta\.kubernetes\.io/aws-load-balancer-scheme"="internet-facing"
 ----
 
 . Verify that you can access the load balancer externally.
