--- a/modules/administration-guide/pages/concealing-editors.adoc
+++ b/modules/administration-guide/pages/concealing-editors.adoc
@@ -33,4 +33,4 @@ spec:
 ----
 <1> A string containing comma-separated IDs of editors to hide.
 
-include::example$snip_{project-context}-concealing-editors-additional-resources.adoc
+include::example$snip_{project-context}-concealing-editors-additional-resources.adoc[]
