--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -23,7 +23,7 @@ A DevWorkspaceTemplate is a custom resource that defines a reusable `spec.templa
 
 When a workspace is started, DWO will read the corresponding {devworkspace} CR and create a workspace pod running the container(s) defined in the devfile.
 
-== Custom Resources
+.Custom Resources overview
 
 Here are the following Custom Resource Definitions provided by the {devworkspace} Operator.
 
