--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -43,7 +43,7 @@ The global config is a DWOC custom resource named `devworkspace-operator-config`
 
 In contrast, any DWOC custom resource that is not the global config is considered to be non-global config. A non-global config will not apply to any {devworkspace}s unless the {devworkspace} contains a reference to the DWOC. If the global config and non-global config have the same fields, the non-global config field will take precedence.
 
-.Global DWOC vs {prod-short}-owned DWOC
+.Global DWOC and {prod-short}-owned DWOC comparison
 [cols="1,1,1",options="header"]
 |===
 | |Global DWOC |{prod-short}-owned DWOC
