--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -25,7 +25,13 @@ When a workspace is started, DWO will read the corresponding {devworkspace} CR a
 
 .Custom Resources overview
 
-Here are the following Custom Resource Definitions provided by the {devworkspace} Operator.
+Following Custom Resource Definitions are provided by the {devworkspace} Operator:
+
+* {devworkspace}
+* DevWorkspaceTemplate
+* DevWorkspaceOperatorConfig
+* DevWorkspaceRouting
+
 
 === {devworkspace}
 
