--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -33,7 +33,7 @@ Following Custom Resource Definitions are provided by the {devworkspace} Operato
 * DevWorkspaceRouting
 
 
-=== {devworkspace}
+.{devworkspace}
 
 The {devworkspace} custom resource contains details about an {prod-short} workspace. Notably, it will contain devfile details and a reference to the editor definition. See <<What is {devworkspace} operator>> for more information.
 
