--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -41,7 +41,7 @@ The {devworkspace} custom resource contains details about an {prod-short} worksp
 
 In {prod-short} the DevWorkspaceTemplate custom resource is typically used to define an editor (such as Visual Studio Code) for {prod-short} workspaces. This custom resource can be used to define reusable `spec.template` content that is reused by multiple {devworkspace}s.
 
-=== DevWorkspaceOperatorConfig
+.DevWorkspaceOperatorConfig
 
 The DevWorkspaceOperatorConfig (DWOC) custom resource defines configuration options for the DWO. There are two different types of DWOC, a global config and a non-global config.
 
