--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -37,7 +37,7 @@ Following Custom Resource Definitions are provided by the {devworkspace} Operato
 
 The {devworkspace} custom resource contains details about an {prod-short} workspace. Notably, it will contain devfile details and a reference to the editor definition.
 
-=== DevWorkspaceTemplate
+.DevWorkspaceTemplate
 
 In {prod-short} the DevWorkspaceTemplate custom resource is typically used to define an editor (such as Visual Studio Code) for {prod-short} workspaces. This custom resource can be used to define reusable `spec.template` content that is reused by multiple {devworkspace}s.
 
