--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -66,7 +66,7 @@ For example, by default {prod-short} creates and manages a non-global DWOC in th
 .Example of {devworkspace} configuration attribute
 image::devworkspace-operator/devworkspace-config-attribute.png[DevWorkspace config attribute example,width=624,height=280]
 
-=== DevWorkspaceRouting
+.DevWorkspaceRouting
 
 The DevWorkspaceRouting custom resource defines details about the endpoints of a {devworkspace}. Every {devworkspace} will have its corresponding DevWorkspaceRouting object that specifies the workspace's container endpoints. Endpoints defined from the devfile, as well as endpoints defined by the editor definition will appear in the DevWorkspaceRouting custom resource.
 
