--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -5,7 +5,7 @@
 :page-aliases: .:devworkspace-operator.adoc
 
 [id="devworkspace-operator"]
-= {devworkspace} operator
+= {devworkspace} Operator overview
 
 
 The {devworkspace} Operator (DWO) is a dependency of {prod-short}, and is an integral part of how {prod-short} functions. To summarize, one of DWO's main responsibilities is to reconcile {devworkspace} custom resources (CR).
