--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -102,7 +102,7 @@ status:
     ...
 ----
 
-== {devworkspace} Operator's operands
+.{devworkspace} Operator's operands
 
 The {devworkspace} Operator has two operands, the controller deployment and the webhook deployment.
 
