Add a note about using the JetBrains IDEs in a disconnected cluster (#2935)
* Update idea-ultimate.adoc

* Update idea-ultimate.adoc

* Update idea-ultimate.adoc

* Update modules/end-user-guide/pages/idea-ultimate.adoc

Co-authored-by: Ilya Buziuk <ibuziuk@redhat.com>

---------

Co-authored-by: Ilya Buziuk <ibuziuk@redhat.com>

--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -62,3 +62,16 @@ image::gateway-select-ws.png[Connecting to OpenShift API server,link="{imagesdir
 +
 
 image::gateway-connecting.png[Connecting to remote host,link="{imagesdir}/gateway-connecting.png"]
+
+== Using in a disconnected cluster
+
+The following URLs must be allow-listed on the proxy side:
+
+* https://download.jetbrains.com/idea/ideaIU-2024.3.2.1.tar.gz
+* https://download.jetbrains.com/webstorm/WebStorm-2024.3.2.1.tar.gz
+* https://download.jetbrains.com/python/pycharm-professional-2024.3.2.tar.gz
+* https://download.jetbrains.com/go/goland-2024.3.2.1.tar.gz
+* https://download.jetbrains.com/cpp/CLion-2024.3.2.tar.gz
+* https://download.jetbrains.com/webide/PhpStorm-2024.3.2.1.tar.gz
+* https://download.jetbrains.com/ruby/RubyMine-2024.3.2.1.tar.gz
+* https://download.jetbrains.com/rider/JetBrains.Rider-2024.3.4.tar.gz
