--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -25,7 +25,7 @@ When a workspace is started, DWO will read the corresponding {devworkspace} CR a
 
 .Custom Resources overview
 
-Following Custom Resource Definitions are provided by the {devworkspace} Operator:
+The following Custom Resource Definitions are provided by the {devworkspace} Operator:
 
 * {devworkspace}
 * DevWorkspaceTemplate
