--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -45,7 +45,7 @@ In {prod-short} the DevWorkspaceTemplate custom resource is typically used to de
 
 The DevWorkspaceOperatorConfig (DWOC) custom resource defines configuration options for the DWO. There are two different types of DWOC, a global config and a non-global config.
 
-The global config is a DWOC custom resource named `devworkspace-operator-config` and is expected to be located in the DWO installation namespace. By default the global config is not created upon installation. Configuration fields set in the global configuration will apply to the DWO and all {devworkspace}s, however the DWOC configuration can be overridden by a non-global config.
+The global config is a DWOC custom resource named `devworkspace-operator-config` and is expected to be located in the DWO installation namespace. By default, the global config is not created upon installation. Configuration fields set in the global configuration will apply to the DWO and all {devworkspace}s; however, the DWOC configuration can be overridden by a non-global config.
 
 In contrast, any DWOC custom resource that is not the global config is considered to be non-global config. A non-global config will not apply to any {devworkspace}s unless the {devworkspace} contains a reference to the DWOC. If the global config and non-global config have the same fields, the non-global config field will take precedence.
 
