--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -47,7 +47,7 @@ The DevWorkspaceOperatorConfig (DWOC) custom resource defines configuration opti
 
 The global config is a DWOC custom resource named `devworkspace-operator-config` and is expected to be located in the DWO installation namespace. By default, the global config is not created upon installation. Configuration fields set in the global configuration will apply to the DWO and all {devworkspace}s; however, the DWOC configuration can be overridden by a non-global config.
 
-In contrast, any DWOC custom resource that is not the global config is considered to be non-global config. A non-global config will not apply to any {devworkspace}s unless the {devworkspace} contains a reference to the DWOC. If the global config and non-global config have the same fields, the non-global config field will take precedence.
+In contrast, any other DWOC custom resource not satisfying abovementioned criteria for global configuration is considered a non-global configuration. These non-global configurations will not apply to any {devworkspace}s unless the {devworkspace} contains a reference to them. When both a global and non-global configuration define the same fields, the non-global configuration's field will take precedence.
 
 .Global DWOC and {prod-short}-owned DWOC comparison
 [cols="1,1,1",options="header"]
