--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -147,7 +147,7 @@ More details on configuration can be found in this link:https://github.com/opera
 
 === Configuring the {devworkspace}-webhook-server deployment
 
-The `devworkspace-webhook-server` deployment can be configured in the global DWOC:
+You can configure the `devworkspace-webhook-server` deployment in the global DWOC:
 
 [source,yaml]
 ----
