--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -68,7 +68,7 @@ image::devworkspace-operator/devworkspace-config-attribute.png[DevWorkspace conf
 
 .DevWorkspaceRouting
 
-The DevWorkspaceRouting custom resource defines details about the endpoints of a {devworkspace}. Every {devworkspace} will have its corresponding DevWorkspaceRouting object that specifies the workspace's container endpoints. Endpoints defined from the devfile, as well as endpoints defined by the editor definition will appear in the DevWorkspaceRouting custom resource.
+The `DevWorkspaceRouting` custom resource defines details about the endpoints of a {devworkspace}. Every {devworkspace} will have its corresponding `DevWorkspaceRouting` object that specifies the workspace's container endpoints. Endpoints defined from the devfile, as well as endpoints defined by the editor definition will appear in the `DevWorkspaceRouting` custom resource.
 
 [source,yaml]
 ----
