--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -8,7 +8,7 @@
 = {devworkspace} Operator overview
 
 
-The {devworkspace} Operator (DWO) is a dependency of {prod-short}, and is an integral part of how {prod-short} functions. To summarize, one of DWO's main responsibilities is to reconcile {devworkspace} custom resources (CR).
+The {devworkspace} Operator (DWO) is a dependency of {prod-short}, and is an integral part of how {prod-short} functions. One of DWO's main responsibilities is to reconcile {devworkspace} custom resources (CR).
 
 The {devworkspace} CR is a {orch-name} resource representation of a {prod-short} workspace. Whenever a user creates a workspace using the {prod-short} Dashboard, {prod-short} will create a {devworkspace} CR in the cluster under the hood. For every {prod-short} workspace, there is an underlying {devworkspace} CR on the cluster.
 
