--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -120,7 +120,7 @@ devworkspace-webhook-server-d4958d9cd-rfvj6 <2>
 
 === Configuring the {devworkspace}-controller-manager deployment
 
-The `devworkspace-controller-manager` pod can be configured in the {devworkspace} Operator Subscription object:
+You can configure the `devworkspace-controller-manager` pod in the {devworkspace} Operator Subscription object:
 
 [source,yaml]
 ----
