--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -104,7 +104,10 @@ status:
 
 .{devworkspace} Operator's operands
 
-The {devworkspace} Operator has two operands, the controller deployment and the webhook deployment.
+The {devworkspace} Operator has two operands:
+
+* controller deployment
+* webhook deployment.
 
 [source,terminal]
 ----
