--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -17,7 +17,7 @@ Figure 1 shows an example of a {devworkspace} CR in a cluster:
 .Example of a {devworkspace} CR in a cluster
 image::devworkspace-operator/devworkspace-cr-example.png[DevWorkspace CR example,width=624,height=465]
 
-When creating a workspace with {prod-short} with a devfile, the {devworkspace} CR will contain the devfile details. Additionally, {prod-short} will add the editor definition into the {devworkspace} CR depending on which editor was chosen for the workspace. {prod-short} will also add attributes to the {devworkspace} which further configures the workspace depending on how the CheCluster CR was configured.
+When creating a workspace with {prod-short} with a devfile, the {devworkspace} CR contains the devfile details. Additionally, {prod-short} adds the editor definition into the {devworkspace} CR depending on which editor was chosen for the workspace. {prod-short} will also add attributes to the {devworkspace} which further configures the workspace depending on how you configured the `CheCluster` CR.
 
 A DevWorkspaceTemplate is a custom resource that defines a reusable `spec.template` for {devworkspace}s.
 
