--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -43,7 +43,10 @@ In {prod-short} the DevWorkspaceTemplate custom resource is typically used to de
 
 .DevWorkspaceOperatorConfig
 
-The DevWorkspaceOperatorConfig (DWOC) custom resource defines configuration options for the DWO. There are two different types of DWOC, a global config and a non-global config.
+The `DevWorkspaceOperatorConfig` (DWOC) custom resource defines configuration options for the DWO. There are two different types of DWOC:
+
+ * global configuration
+ * non-global configuration
 
 The global config is a DWOC custom resource named `devworkspace-operator-config` and is expected to be located in the DWO installation namespace. By default, the global config is not created upon installation. Configuration fields set in the global configuration will apply to the DWO and all {devworkspace}s; however, the DWOC configuration can be overridden by a non-global config.
 
