--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -10,7 +10,7 @@
 
 The {devworkspace} Operator (DWO) is a dependency of {prod-short}, and is an integral part of how {prod-short} functions. One of DWO's main responsibilities is to reconcile {devworkspace} custom resources (CR).
 
-The {devworkspace} CR is a {orch-name} resource representation of a {prod-short} workspace. Whenever a user creates a workspace using the {prod-short} Dashboard, {prod-short} will create a {devworkspace} CR in the cluster under the hood. For every {prod-short} workspace, there is an underlying {devworkspace} CR on the cluster.
+The {devworkspace} CR is a {orch-name} resource representation of a {prod-short} workspace. Whenever a user creates a workspace using the {prod-short} In the background, Dashboard {prod-short} creates a {devworkspace} CR in the cluster. For every {prod-short} workspace, there is an underlying {devworkspace} CR on the cluster.
 
 Figure 1 shows an example of a {devworkspace} CR in a cluster:
 
