--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -39,7 +39,7 @@ The {devworkspace} custom resource contains details about an {prod-short} worksp
 
 .DevWorkspaceTemplate
 
-In {prod-short} the DevWorkspaceTemplate custom resource is typically used to define an editor (such as Visual Studio Code) for {prod-short} workspaces. This custom resource can be used to define reusable `spec.template` content that is reused by multiple {devworkspace}s.
+In {prod-short} the `DevWorkspaceTemplate` custom resource is typically used to define an editor (such as Visual Studio Code - Open Source) for {prod-short} workspaces. You can use this custom resource to define reusable `spec.template` content that is reused by multiple {devworkspace}s.
 
 .DevWorkspaceOperatorConfig
 
