--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -35,7 +35,7 @@ The following Custom Resource Definitions are provided by the {devworkspace} Ope
 
 .{devworkspace}
 
-The {devworkspace} custom resource contains details about an {prod-short} workspace. Notably, it will contain devfile details and a reference to the editor definition.
+The {devworkspace} custom resource contains details about an {prod-short} workspace. Notably, it contains devfile details and a reference to the editor definition.
 
 .DevWorkspaceTemplate
 
