--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -27,10 +27,10 @@ When a workspace is started, DWO will read the corresponding {devworkspace} CR a
 
 The following Custom Resource Definitions are provided by the {devworkspace} Operator:
 
-* {devworkspace}
-* DevWorkspaceTemplate
-* DevWorkspaceOperatorConfig
-* DevWorkspaceRouting
+* `{devworkspace}`
+* `DevWorkspaceTemplate`
+* `DevWorkspaceOperatorConfig`
+* `DevWorkspaceRouting`
 
 
 .{devworkspace}
