--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -19,7 +19,7 @@ image::devworkspace-operator/devworkspace-cr-example.png[DevWorkspace CR example
 
 When creating a workspace with {prod-short} with a devfile, the {devworkspace} CR contains the devfile details. Additionally, {prod-short} adds the editor definition into the {devworkspace} CR depending on which editor was chosen for the workspace. {prod-short} will also add attributes to the {devworkspace} which further configures the workspace depending on how you configured the `CheCluster` CR.
 
-A DevWorkspaceTemplate is a custom resource that defines a reusable `spec.template` for {devworkspace}s.
+A `DevWorkspaceTemplate` is a custom resource that defines a reusable `spec.template` for {devworkspace}s.
 
 When a workspace is started, DWO will read the corresponding {devworkspace} CR and create a workspace pod running the container(s) defined in the devfile.
 
