--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -21,7 +21,7 @@ When creating a workspace with {prod-short} with a devfile, the {devworkspace} C
 
 A `DevWorkspaceTemplate` is a custom resource that defines a reusable `spec.template` for {devworkspace}s.
 
-When a workspace is started, DWO will read the corresponding {devworkspace} CR and create a workspace pod running the container(s) defined in the devfile.
+When a workspace is started, DWO reads the corresponding {devworkspace} CR and creates a workspace pod running the container(s) defined in the devfile.
 
 .Custom Resources overview
 
