--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -151,7 +151,7 @@ spec:
 
 Learn more about configuration in this link:https://github.com/operator-framework/operator-lifecycle-manager/blob/master/doc/design/subscription-config.md[documentation].
 
-=== Configuring the {devworkspace}-webhook-server deployment
+.Configuring the {devworkspace}-webhook-server deployment
 
 You can configure the `devworkspace-webhook-server` deployment in the global DWOC:
 
