--- a/modules/end-user-guide/pages/url-parameter-for-the-existing-workspace-name.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-existing-workspace-name.adoc
@@ -7,9 +7,12 @@
 [id="url-parameter-for-the-existing-workspace-name"]
 = URL parameter for the existing workspace name
 
-If the URL for starting a new workspace contain a URL parameter specifying the existing workspace name,
-an existing workspace created from the same URL is opened, or a new workspace is created.
-The specified existing workspace name will be preferred if multiple workspaces were created from the same URL.
+If you start a new workspace with a URL that contains the `existing` URL parameter specifying an existing workspace name, the existing workspace created from the same URL is opened. If no workspace from the same URL exists yet, a new workspace is created.
+
+[NOTE]
+====
+If you create multiple workspaces from the same URL, the specified existing workspace name will be preferred.
+====
 
 The URL parameter for the existing workspace name is `existing=`:
 
