Make header larger, move link to snippet file
Signed-off-by: dkwon17-test <dakwon@redhat.com>

--- a/modules/administration-guide/examples/snip_che-devworkspace-additional-resources.adoc
+++ b/modules/administration-guide/examples/snip_che-devworkspace-additional-resources.adoc
@@ -1,4 +1,5 @@
 :_content-type: SNIPPET
 
+* link:https://github.com/devfile/api[Devfile API repository]
 * link:https://quay.io/repository/devfile/devworkspace-controller?tab=history[`quay.io/devfile/devworkspace-controller` container image]
 * link:https://github.com/devfile/devworkspace-operator[{devworkspace} Operator repository] 
