--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -105,7 +105,7 @@ status:
     ...
 ----
 
-.{devworkspace} Operator's operands
+== {devworkspace} Operator's operands
 
 The {devworkspace} Operator has two operands:
 
@@ -124,7 +124,7 @@ devworkspace-webhook-server-d4958d9cd-rfvj6 <2>
 <1> The {devworkspace} controller pod, which is responsible for reconciling custom resources
 <2> The {devworkspace} operator webhook server pods
 
-=== Configuring the {devworkspace}-controller-manager deployment
+.Configuring the {devworkspace}-controller-manager deployment
 
 You can configure the `devworkspace-controller-manager` pod in the {devworkspace} Operator Subscription object:
 
@@ -171,5 +171,4 @@ config:
 
 .Additional resources
 
-* link:https://github.com/devfile/api[Devfile API repository]
 include::example$snip_{project-context}-devworkspace-additional-resources.adoc[]
