chore: New Additional resources snippet (#2938)
* fixed typo

* fixed missing letter

* create snippet

* create snippet

--- a/modules/administration-guide/pages/concealing-editors.adoc
+++ b/modules/administration-guide/pages/concealing-editors.adoc
@@ -33,11 +33,4 @@ spec:
 ----
 <1> A string containing comma-separated IDs of editors to hide.
 
-.Additional resources
-
-* xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
-
-* xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
-
-* {editor-definition-samples-link}
-
+include::example$snip_{project-context}-concealing-editors-additional-resources.adoc[]
