--- a/modules/administration-guide/examples/snip_che-deploy-open-vsx-using-oc.adoc
+++ b/modules/administration-guide/examples/snip_che-deploy-open-vsx-using-oc.adoc
@@ -1,6 +1,6 @@
 * Internet connection.
 * Installed oc and git tools.
-* Installed podman.
+* Installed Podman.
 * Log in to the OpenShift cluster where a {prod-short} is deployed as an administrator.
 +
 [TIP]
@@ -18,7 +18,7 @@
 ----
 oc new-project openvsx
 ----
-. Clone Open VSX sorces.
+. Clone Open VSX sources.
 +
 Get Open VSX sources and navigate to the OpenShift deploy directory:
 +
@@ -82,7 +82,7 @@ oc process -f openvsx-deployment.yml \
 | oc apply -f -
 ----
 
-. Verify that all pods in the `openvsx` namespace are running and ready. It may take a few minutes for all pods to become ready. Run the following command:
+. Verify that all pods in the `openvsx` namespace are running and ready. It might take a few minutes for all pods to become ready. Run the following command:
 +
 [bash,subs="verbatim",options="nowrap"]
 ----
@@ -127,11 +127,11 @@ export PATCH='{"spec":{"components":{"pluginRegistry":{"openVSXURL":"https://'"$
 oc patch checluster "${CHECLUSTER_NAME}" --type=merge --patch "${PATCH}" -n "${CHECLUSTER_NAMESPACE}"
 ----
 
-. Publish VS Code extensions with the ovsx command.
+. Publish Visual Studio Code extensions with the ovsx command.
 +
-With everything configured, the next step is to publish a VS Code extension from inside the ovsx-cli container.
+With everything configured, the next step is to publish a Visual Studio Code extension from inside the ovsx-cli container.
 To do this, you need two pieces of information: the extension namespace name (used for publishing), the download URL of the .vsix extension package.
-Once you have this information, execute the following commands to publish the extension: 
+Once you have this information, run the following commands to publish the extension: 
 +
 .. Retrieve the name of the pod running the Open VSX server:
 + 
