--- a/modules/administration-guide/pages/running-the-open-vsx-on-premises.adoc
+++ b/modules/administration-guide/pages/running-the-open-vsx-on-premises.adoc
@@ -7,7 +7,7 @@
 [id="running-the-open-vsx-on-premises"]
 = Running the Open VSX On-Premises
 
-Provides a step-by-step walkthrough for deploying and configuring an on-premises Eclipse Open VSX extension registry, fully integrated with {prod-short} and OpenShift environments. It covers two setup paths - using a {prod-short} workspace or the OpenShift CLI (oc) - to help administrators set up a secure, internal Open VSX instance. This includes creating necessary OpenShift project, deploying Open VSX components, publishing extensions and integrating the registry with {prod-short}.
+Provides a step-by-step instructions for deploying and configuring an on-premises Eclipse Open VSX extension registry, fully integrated with {prod-short} and OpenShift environments. It covers two setup paths - using a {prod-short} workspace or the OpenShift CLI (oc) - to help administrators set up a secure, internal Open VSX instance. This includes creating necessary OpenShift project, deploying Open VSX components, publishing extensions and integrating the registry with {prod-short}.
 
 == Using {prod-short} instance
 
@@ -20,7 +20,7 @@ Provides a step-by-step walkthrough for deploying and configuring an on-premises
 
 . Start a workspace using the Open VSX repository.
 +
-Create a workspace using the following link:https://github.com/svor/openvsx/tree/sv-update-os-deployment[Eclipse Open VSX repository].
+Create a workspace by using the following link:https://github.com/svor/openvsx/tree/sv-update-os-deployment[Eclipse Open VSX repository].
 +
 [TIP]
 ====
@@ -48,13 +48,13 @@ Run the `2.6. Configure Che to use the internal Open VSX registry` task in the w
 
 .  Publish list of extensions.
 +
-At the beginning, the Open VSX registry does not provide any extension. The `2.8. Publish list of VS Code Extensions` command automates the process of publishing a predefined list of Microsoft Visual Studio Code extensions to the internal Open VSX registry. 
+At the beginning, the Open VSX registry does not provide any extension. The `2.8. Publish list of Visual Studio Code Extensions` command automates the process of publishing a predefined list of Microsoft Visual Studio Code extensions to the internal Open VSX registry. 
 +
 [TIP]
 ====
 The command reads from the `deploy/openshift/extensions.txt` file, which lists the URLs of `.vsix` files for each extension to be published.
-To publish your desired extensions to Open VSX, update the `extensions.txt` file as needed, then run the 2.8. Publish list of VS Code Extensions task from the workspace:
-`Terminal → Run Task… → devfile → 2.8. Publish list of VS Code Extensions`.
+To publish your extensions to Open VSX, update the `extensions.txt` file as needed, then run the 2.8. Publish list of Visual Studio Code Extensions task from the workspace:
+`Terminal → Run Task… → devfile → 2.8. Publish list of Visual Studio Code Extensions`.
 ====
 
 . Verify that {prod-short} uses internal Open VSX.
@@ -115,7 +115,7 @@ Check the list of published extensions by navigating to the URL defined in the O
 
 == Setting Up Internal Access to the Open VSX Service
 
-In addition to using a public route to reference the Open VSX registry, it's also possible to configure {prod-short} to utilize internal cluster service routing. This method provides enhanced security by keeping traffic confined within the cluster, avoiding public exposure.
+In addition to using a public route to reference the Open VSX registry, it's also possible to configure {prod-short} to set internal cluster service routing. This method provides enhanced security by keeping traffic confined within the cluster, avoiding public exposure.
 
 .Procedure
 
