fix linter errors
Signed-off-by: Valeriy Svydenko <vsvydenk@redhat.com>

--- a/modules/administration-guide/examples/snip_che-deploy-open-vsx-using-oc.adoc
+++ b/modules/administration-guide/examples/snip_che-deploy-open-vsx-using-oc.adoc
@@ -1,5 +1,5 @@
 * Internet connection.
-* Installed oc and git tools.
+* Installed `oc` and git tools.
 * Installed Podman.
 * Log in to the OpenShift cluster where a {prod-short} is deployed as an administrator.
 +
@@ -127,10 +127,10 @@ export PATCH='{"spec":{"components":{"pluginRegistry":{"openVSXURL":"https://'"$
 oc patch checluster "${CHECLUSTER_NAME}" --type=merge --patch "${PATCH}" -n "${CHECLUSTER_NAMESPACE}"
 ----
 
-. Publish Visual Studio Code extensions with the ovsx command.
+. Publish Visual Studio Code extensions with the `ovsx` command.
 +
 With everything configured, the next step is to publish a Visual Studio Code extension from inside the ovsx-cli container.
-To do this, you need two pieces of information: the extension namespace name (used for publishing), the download URL of the .vsix extension package.
+To do this, you need two pieces of information: the extension `namespace` name (used for publishing), the download URL of the .vsix extension package.
 Once you have this information, run the following commands to publish the extension: 
 +
 .. Retrieve the name of the pod running the Open VSX server:
