--- a/modules/administration-guide/examples/snip_che-deploy-open-vsx.adoc
+++ b/modules/administration-guide/examples/snip_che-deploy-open-vsx.adoc
@@ -1,15 +1,15 @@
 . Build and Publish Open VSX image.
 +
-To build and deploy the Open VSX server container image to the OpenShift internal image registry, run the 2.2. Build and Publish Open VSX Image task in the workspace: ('Terminal → Run Task… → devfile → 2.2. Build and Publish OpenVSX Image'). During execution, you’ll be prompted to enter the desired Open VSX server version. If left blank, the task will default to using v0.27.0.
+To build and deploy the Open VSX server container image to the OpenShift internal image registry, run the 2.2. Build and Publish Open VSX Image task in the workspace: ('Terminal → Run Task… → devfile → 2.2. Build and Publish OpenVSX Image'). During execution, you will be prompted to enter the Open VSX server version. If left blank, the task will default to using v0.27.0.
 +
 [TIP]
 ====
 Open VSX server versions could be found on the OpenVSX GitHub release page: https://github.com/eclipse/openvsx/releases 
 ====
 
-. Build and Publish OpenVSX CLI (ovsx) Image.
+. Build and Publish OpenVSX CLI (`ovsx`) Image.
 +
-Run '2.3. Build and Publish OpenVSX CLI Image' task in the workspace ('Terminal → Run Task… → devfile → 2.3. Build and Publish OpenVSX CLI Imag') to build the Open VSX CLI image and push it to OpenShift internal registry.
+Run '2.3. Build and Publish OpenVSX CLI Image' task in the workspace ('Terminal → Run Task… → devfile → 2.3. Build and Publish OpenVSX CLI Image') to build the Open VSX CLI image and push it to OpenShift internal registry.
 
 . Deploy Open VSX.
 +
@@ -24,5 +24,5 @@ Run '2.4. Deploy OpenVSX' task in the workspace ('Terminal → Run Task… → d
 +
 [TIP]
 ====
-All deployment information is described in the 'deploy/openshift/openvsx-deployment.yml' file with some default values like 'OVSX_PAT_BASE64'. 
+All deployment information is described in the 'deploy/openshift/openvsx-deployment.yml' file with some default values such as 'OVSX_PAT_BASE64'. 
 ====
