--- a/modules/administration-guide/pages/configuring-editors-download-urls.adoc
+++ b/modules/administration-guide/pages/configuring-editors-download-urls.adoc
@@ -6,7 +6,7 @@
 [id="configuring-editors-download-urls"]
 = Configuring editors download urls
 
-Learn how to configure editors download urls. This feature is valuable in air-gapped environments where editors cannot be retrieved from the public internet.
+Learn how to configure editors download urls. This feature is valuable in air-gapped environments where editors cannot be retrieved from the public internet. Currently, this option is intended only for JetBrains editors and should not be used for other editor types.
 
 .Prerequisites
 
